<resources>
    <string name="app_name">MoneyTracker</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_movements">Movements</string>
    <string name="title_movement">Movement</string>
    <string name="hint_description">Description</string>
    <string name="hint_price">Price</string>
    <string name="label_in">IN</string>
    <string name="label_out">OUT</string>
    <string name="label_date">Date</string>
    <string name="label_save">Save</string>
</resources>
