<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.cdp.moneytracker.viewsmodel.MovementViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="true"
        tools:context=".views.MovementFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dp_16">

            <RadioGroup
                android:id="@+id/rg_mov_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/rb_mov_type_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_16"
                    android:layout_marginRight="@dimen/dp_16"
                    android:checked="@={viewmodel.isMovementTypeIN}"
                    android:text="@string/label_in" />

                <RadioButton
                    android:id="@+id/rb_mov_type_out"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_16"
                    android:layout_marginRight="@dimen/dp_16"
                    android:checked="@={viewmodel.isMovementTypeOUT}"
                    android:text="@string/label_out" />
            </RadioGroup>

            <ImageView
                android:id="@+id/img_data_icon"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:contentDescription="@string/label_date"
                android:src="@drawable/ic_date_range_black_24dp"
                app:layout_constraintBottom_toBottomOf="@+id/layout_mov_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/layout_mov_date" />

            <ImageView
                android:id="@+id/img_description_icon"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:contentDescription="@string/hint_description"
                android:src="@drawable/ic_description_black_24dp"
                app:layout_constraintBottom_toBottomOf="@+id/layout_mov_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/layout_mov_description" />

            <ImageView
                android:id="@+id/img_price_icon"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:contentDescription="@string/hint_price"
                android:src="@drawable/ic_attach_money_black_24dp"
                app:layout_constraintBottom_toBottomOf="@+id/layout_mov_price"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/layout_mov_price" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_mov_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_data_icon"
                app:layout_constraintTop_toBottomOf="@+id/rg_mov_type">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_mov_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/label_date"
                    android:text="@={viewmodel.date}"
                    android:inputType="date" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_mov_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_description_icon"
                app:layout_constraintTop_toBottomOf="@+id/layout_mov_date">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_mov_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_description"
                    android:inputType="text"
                    android:text="@={viewmodel.description}"
                    android:lines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_mov_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_price_icon"
                app:layout_constraintTop_toBottomOf="@+id/layout_mov_description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_mov_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_price"
                    android:text="@={viewmodel.price}"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_mov_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:text="@string/label_save"
                android:onClick="@{() -> viewmodel.save()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/layout_mov_price"
                app:layout_constraintStart_toStartOf="@+id/layout_mov_price"
                app:layout_constraintTop_toBottomOf="@+id/layout_mov_price" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>
</layout>